# Project_B

./: Cargo.toml  README.md  build.rs  pyproject.toml  rust-toolchain.toml  setup.py
cli/: README.md  common.py  main.py  setup_cli.sh
cli/project_b_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
config/: adapters.yaml  aei_policies.yaml  context_rules.yaml  sensor_map.json
docs/: cargo-tree.md  project_structure.md
docs/architecture/: relationship_architecture.mmd  technical_overview.md
pi5/: pi5-setup-script.sh
project_b_cli.egg-info/: PKG-INFO  SOURCES.txt
src/: lib.rs  main.rs  types.rs
src/ae/core/: Cargo.toml
src/ae/core/ae_core/: Cargo.toml
src/ae/core/ae_core/src/: aei1.rs  aei2.rs  aei3.rs  core.rs  lib.rs
src/ae/core/ae_native/: CMakeLists.txt
src/ae/core/ae_native/include/ae_native/: crc32c.hpp  event_codec.hpp  fast_ring_buffer.hpp  metrics_exporter.hpp  prio_queue.hpp  time_monotonic.hpp  watchdog.hpp
src/ae/core/ae_native/src/: crc32c.cpp  event_codec.cpp  fast_ring_buffer.cpp  metrics_exporter.cpp  prio_queue.cpp  time_monotonic.cpp  watchdog.cpp
src/ae/core/aei/: README.md
src/ae/core/daemon/: Cargo.toml
src/ae/core/daemon/src/: main.rs
src/ae/core/docs/: ARCHITECTURE.md  README.md
src/ae/core/messages/: ae_core.proto
src/ae/core/tools/bench/: README.md
src/ae/core/tools/replay/: README.md
src/ae/dec/daemon/: Cargo.toml
src/ae/dec/daemon/src/: main.rs
src/ae/dec/dec/: Cargo.toml
src/ae/dec/dec/src/: engine.rs
src/ae/dec/dec_native/: CMakeLists.txt
src/ae/dec/dec_native/src/: crc32c.cpp  event_codec.cpp  fast_ring_buffer.cpp  metrics_exporter.cpp  prio_queue.cpp  time_monotonic.cpp  watchdog.cpp
src/ae/dec/docs/: ARCHITECTURE.md  README.md
src/ae/dec/messages/: dec.proto
src/ae/ea/daemon/: Cargo.toml
src/ae/ea/daemon/src/: main.rs
src/ae/ea/docs/: ARCHITECTURE.md  README.md
src/ae/ea/ea/: Cargo.toml
src/ae/ea/ea/src/: archive.rs  lib.rs
src/ae/ea/ea_native/: CMakeLists.txt
src/ae/ea/ea_native/src/: crc32c.cpp  event_codec.cpp  fast_ring_buffer.cpp  (+4 more)
src/ae/ea/messages/: ea.proto
src/ae/im/docs/: IM_Comprehensive_Overview.md  README.md
src/ae/im/im_core/: Cargo.toml
src/ae/im/im_native/: CMakeLists.txt
src/ae/im/imd/: Cargo.toml
src/ae/im/messages/: im.proto
src/ae/sa/daemon/: Cargo.toml
src/ae/sa/docs/: ARCHITECTURE.md  README.md
src/ae/sa/messages/: sa.proto
src/ae/sa/sa/: Cargo.toml
src/ae/sa/sa_native/: CMakeLists.txt
src/ae/ta/daemon/: Cargo.toml
src/ae/ta/docs/: ARCHITECTURE.md  README.md
src/ae/ta/messages/: ta.proto
src/ae/ta/ta/: Cargo.toml
src/ae/ta/ta_native/: CMakeLists.txt
src/mm/lt/: Cargo.toml
src/mm/lt/daemon/: Cargo.toml
src/mm/lt/docs/: ARCHITECTURE.md  README.md
src/mm/lt/messages/: mm_lt.proto
src/mm/lt/mm_native/: CMakeLists.txt
src/mm/lt/mm_native/include/mm_native/: crc32c.hpp  prio_queue.hpp  time_monotonic.hpp  watchdog.hpp
src/mm/lt/mm_native/src/: event_codec.cpp  prio_queue.cpp  time_monotonic.cpp  watchdog.cpp
src/mm/st/: Cargo.toml
src/mm/st/daemon/: Cargo.toml
src/mm/st/docs/: API.md  ARCHITECTURE.md  README.md
src/mm/st/messages/: mm_st.proto
src/shared/contracts/: base.proto
src/shared/libs/rust/base_types/: Cargo.toml  Cargo.toml.bak
src/shared/libs/rust/base_types/src/: lib.rs
src/simulate/docs/: approach.md  dev_task_list.md  directory_structure.md  technical_overview.md
(+87 files in other folders)
