[package]
name = "ae_core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Awareness Engine Core (hosts AEI1/2/3) for Project_B"

[lib]
name = "ae_core"
path = "src/lib.rs"

[features]
default = []
with_protos = []

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
crc32fast.workspace = true
project_b_base_types.workspace = true
