[package]
name = "ea"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread","macros","time","sync"] }
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt","env-filter"] }
prost = "0.13"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crc32fast = "1"